# CmakeBuildExample

./: Makefile  README.md
Exe cmake/: CMakeLists.txt
Lib cmake/: CMakeLists.txt
Main cmake/: CMakeLists.txt
Test cmake/: CMakeLists.txt
